Added about us page. Updated page header.

--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,9 +1,11 @@
-<section class="page-header">
-    <div class="fixed db stars-one"></div>
-    <div class="fixed db stars-two"></div>
-    <h1 class="project-name">{{ site.title }}</h1>
-    <h2 class="project-tagline">{{ site.tagline }}</h2>
-    <a href="#" class="btn">View on GitHub</a>
-    <a href="#" class="btn">Download .zip</a>
-    <a href="#" class="btn">Download .tar.gz</a>
+<section class="page-header-container">
+    <div class="page-header-bg"></div>
+    <div class="stars-one"></div>
+    <div class="stars-two"></div>
+    <div class="z-index-0 page-header-content">
+        <h1 class="project-name">{{ site.title }}</h1>
+        <h2 class="project-tagline">{{ site.tagline }}</h2>
+        <a href="/" class="btn">Home</a>
+        <a href="/about" class="btn">About Me</a>
+    </div>
 </section>
