--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ title: {{ site.name }}
 <div id="home">
   {{content}}
   
-  <h1>Blog Posts</h1>
+  <h1>My Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
