Added resume button. Removed pages for now.

--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -7,5 +7,6 @@
         <h2 class="project-tagline">{{ site.tagline }}</h2>
         <a href="/" class="btn">Home</a>
         <a href="/about" class="btn">About Me</a>
+        <a href="/resume.pdf" class="btn">Resume/CV</a>
     </div>
 </section>
