--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,11 +5,13 @@ title: {{ site.name }}
 
 <div id="home">
   {{content}}
+  {% if site.blog.enabled %}
+    <h1>My Posts</h1>
+    <ul class="posts">
+        {% for post in site.posts %}
+          <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+    </ul>
+  {% endif %}
   
-  <h1>My Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
 </div>
